--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.16.0",
+    "classnames": "^2.5.1",
     "next": "14.2.14",
     "prettier": "^3.3.3",
     "react": "^18",
@@ -30,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vanilla-extract/next-plugin": "^2.4.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "eslint-plugin-storybook": "^0.9.0",
