--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-interactions": "^8.3.5",
     "@storybook/addon-links": "^8.3.5",
     "@storybook/addon-onboarding": "^8.3.5",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.3.5",
     "@storybook/nextjs": "^8.3.5",
     "@storybook/react": "^8.3.5",
@@ -32,9 +33,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vanilla-extract/next-plugin": "^2.4.6",
+    "@vanilla-extract/webpack-plugin": "^2.3.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "eslint-plugin-storybook": "^0.9.0",
+    "mini-css-extract-plugin": "^2.9.1",
     "storybook": "^8.3.5",
     "typescript": "^5"
   }
