--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vanilla-extract/css": "^1.16.0",
     "chromatic": "^11.11.0",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "next": "14.2.14",
     "prettier": "^3.3.3",
     "react": "^18",
