--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "chromatic": "npx chromatic --project-token=chpt_5f2edbfd13b6265"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-devtools": "^5.59.0",
     "@vanilla-extract/css": "^1.16.0",
     "chromatic": "^11.11.0",
     "classnames": "^2.5.1",
