--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chromatic": "^11.11.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
-    "next": "14.2.14",
+    "next": "^14.2.3",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18"
