--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^14.2.3",
     "prettier": "^3.3.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
