--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.13.1"
+    "react-intersection-observer": "^9.13.1",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
