--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chromatic": "^11.11.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "framer-motion": "^11.11.9",
     "next": "^14.2.3",
     "prettier": "^3.3.3",
     "react": "^18",
