--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.9",
+    "lodash": "^4.17.21",
     "next": "^14.2.3",
     "prettier": "^3.3.3",
     "react": "^18",
