--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "chromatic": "npx chromatic --project-token=chpt_5f2edbfd13b6265"
   },
   "dependencies": {
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-query-devtools": "^5.59.0",
     "@vanilla-extract/css": "^1.16.0",
     "chromatic": "^11.11.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.10",
+    "framer-motion-3d": "^11.11.10",
     "lodash": "^4.17.21",
     "next": "^14.2.3",
     "prettier": "^3.3.3",
