--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.10",
     "framer-motion-3d": "^11.11.10",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "^14.2.3",
     "prettier": "^3.3.3",
@@ -41,6 +42,7 @@
     "@storybook/nextjs": "^8.3.5",
     "@storybook/react": "^8.3.5",
     "@storybook/test": "^8.3.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
