--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
@@ -46,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@vanilla-extract/next-plugin": "^2.4.6",
     "@vanilla-extract/webpack-plugin": "^2.3.14",
     "eslint": "^8",
