--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1",
     "react-slick": "^0.30.2",
+    "react-textarea-autosize": "^8.5.4",
     "slick-carousel": "^1.8.1",
     "zustand": "^5.0.0"
   },
