--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chromatic": "npx chromatic --project-token=chpt_5f2edbfd13b6265"
   },
   "dependencies": {
+    "@byoungyoon/by-asset": "^1.2.7",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "@tanstack/react-query": "^5.59.0",
