--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-slick": "^0.30.2",
     "react-textarea-autosize": "^8.5.4",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "zustand": "^5.0.0"
   },
